--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ ipython-genutils==0.2.0
 ipywidgets==7.4.2
 isort==4.3.16
 jedi==0.13.3
-Jinja2==2.10
+Jinja2>=2.10.1
 jsonschema==3.0.1
 jupyter==1.0.0
 jupyter-client==5.2.4
@@ -107,7 +107,7 @@ tornado==6.0.2
 tqdm==4.31.1
 traitlets==4.3.2
 typed-ast==1.3.1
-urllib3==1.24.1
+urllib3>=1.24.2
 wcwidth==0.1.7
 webencodings==0.5.1
 Werkzeug==0.15.2
